[TASK] img-text-left-right CE, add option to not crop the image if height = 0

--- a/theme/src/css/main/content-elements/image-text-left-right.css
+++ b/theme/src/css/main/content-elements/image-text-left-right.css
@@ -15,7 +15,7 @@
   position: relative;
 }
 
-.ce-img-text-left-right__picture .picture-partial__item-img {
+.ce-img-text-left-right__picture--cropped .picture-partial__item-img {
   position: absolute;
   object-fit: cover;
   left: 0;
@@ -77,6 +77,7 @@
   .ce-img-text-left-right {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 
   .ce-img-text-left-right--right .ce-img-text-left-right {
