--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLeftRight.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLeftRight.html
@@ -7,13 +7,9 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/ImageTextLeftRight.html [begin] -->
 
-  <f:if condition="{flexform.image_height} == 0">
-    <f:then>
-      <f:variable name="height">400</f:variable>
-    </f:then>
-    <f:else>
+  <f:if condition="{flexform.image_height} > 0">
       <f:variable name="height">{flexform.image_height}</f:variable>
-    </f:else>
+      <f:variable name="cropped">ce-img-text-left-right__picture--cropped</f:variable>
   </f:if>
 
   <f:if condition="{data.section_container_width} == 'container'">
@@ -28,8 +24,8 @@
 
       <f:if condition="{files}">
         <div class="ce-img-text-left-right__picture-wrp"
-          {f:if(condition:height, then: 'style="flex-basis: {width}%;"')}>
-          <div class="ce-img-text-left-right__picture"
+          {f:if(condition:width, then: 'style="flex-basis: {width}%;"')}>
+          <div class="ce-img-text-left-right__picture {cropped}"
             {f:if(condition:height, then: 'style="height: {height}px;"')}>
             <f:render partial="Media/Type" arguments="{_all}" />
           </div>
